Tue Jul  9 17:43:57 2013  Koichi Sasada  <ko1@atdot.net>

	* test/test_tracer.rb: catch up recent rubygems changes.

Tue Jul  9 16:58:30 2013  NAKAMURA Usaku  <usa@ruby-lang.org>

	* ext/{dl,fiddle}/win32/lib/win32/registry.rb: hope that the final
	  resolution to fix the failure of test-all.  and includes Win64
	  support (fixed a potential bug).

Tue Jul  9 15:57:20 2013  Akinori MUSHA  <knu@iDaemons.org>

	* object.c: Fix rdoc for Kernel#<=>. [Fix GH-352]

Tue Jul  9 15:53:51 2013  Akinori MUSHA  <knu@iDaemons.org>

	* lib/fileutils.rb (FileUtils#mode_to_s): Define mode_to_s() also
	  as singleton method, or FileUtils.chmod fails in verbose mode.

Tue Jul  9 15:16:02 2013  Akinori MUSHA  <knu@iDaemons.org>

	* test/fileutils/fileasserts.rb
	  (Test::Unit::FileAssertions#assert_not_symlink): Add a missing
	  optional argument "message".

Tue Jul  9 15:03:24 2013  Akinori MUSHA  <knu@iDaemons.org>

	* lib/fileutils.rb (FileUtils#chown, FileUtils#chown_R): If user
	  and group are both nil, print ":".

Tue Jul  9 12:47:08 2013  Masaki Matsushita  <glass.saga@gmail.com>

	* io.c (appendline): use READ_CHAR_PENDING_XXX macros and
	  RSTRING_END().

	* io.c (rb_io_getline_1): rewrite nested if statement into one
	  statement.

Tue Jul  9 11:04:35 2013  NAKAMURA Usaku  <usa@ruby-lang.org>

	* ext/{dl,fiddle}/win32/lib/win32/registry.rb (Win32::Regstry#check):
	  should report the position of the error.

	* ext/{dl,fiddle}/win32/lib/win32/registry.rb
	  (Win32::Regstry#QueryValue): workaround for test-all crash.

Tue Jul  9 10:27:56 2013  NAKAMURA Usaku  <usa@ruby-lang.org>

	* ext/{dl,fiddle}/win32/lib/win32/registry.rb
	  (Win32::Registry.expand_environ): use suitable encoding for the
	  string.

	* ext/{dl,fiddle}/win32/lib/win32/registry.rb (Win32::Registry#read):
	  should return REG_SZ, REG_EXPAND_SZ and REG_MULTI_SZ values with
	  the expected encoding -- assumed as the same encoding of name.

Tue Jul  9 10:02:45 2013  NAKAMURA Usaku  <usa@ruby-lang.org>
